did some styling

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,20 +1,12 @@
-<h1>Listing articles</h1>
-
-<%= link_to "New article", new_article_path %>
-
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Text</th>
-  </tr>
-  
-  <% @articles.each do |article| %>
-    <tr>
-      <td><%= article.title %></td>
-      <td><%= article.text %></td>
-      <td><%= link_to 'Show', article_path(article) %></td>
-      <td><%= link_to 'Edit', edit_article_path(article) %></td>
-      <td><%= link_to 'Destroy', article_path(article), method: :delete, data: {confirm: 'Are you sure?' } %></td>
-    </tr>
+<div class="w-1-2 m-xl">
+<h1>Posts</h1>
+<%= link_to "New article", new_article_path, :class => 'td-n' %>
+<% @articles.each do |article| %>
+  <%= link_to article_path(article), :class => "td-n brd-b" do %>
+  <div class="brd-b pl-lg">
+    <h2><%= article.title %></h2>
+    <p><%= friendly_date(article.created_at) %></p>
+  </div>
   <% end %>
-</table>
+<% end %>
+</div>
