--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
-<h1>hello rails</h1>
-<%= link_to 'My Blog', controller: 'articles' %>
+<div class="w-1-2 m-xl">
+  <h1>This is my blog</h1>
+  <%= link_to 'My Blog', controller: 'articles' %>
+</div>
