--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,4 @@
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -13,3 +14,15 @@
  *= require_tree .
  *= require_self
  */
+
+.brd-b {
+  border-bottom: 2px solid black;
+}
+
+.h1-title {
+  margin-top: 0;
+}
+
+ 'nuclide'
+ 'grid'
+
