--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,7 @@
-<h1>Editing article</h1>
- 
-<%= render 'form' %>
- 
-<%= link_to 'Back', articles_path %>
+<div class="w-1-2 m-xl">
+  <h1>Editing article</h1>
+
+  <%= render 'form' %>
+
+  <%= link_to 'Back', articles_path %>
+</div>
