--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New article</h1>
+<div class="w-1-2 m-xl">
+  <h1>New article</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back', articles_path %>
+  <%= link_to 'Back', articles_path %>
+</div>
