--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,17 +1,17 @@
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
+<div class="w-1-2 m-xl">
+  <h1>
+    <%= @article.title %>
+  </h1>
 
-<p>
-  <strong>Text:</strong>
-  <%= @article.text %>
-</p>
+  <p>
+    <%= @article.text %>
+  </p>
 
-<h2>Comments</h2>
-<%= render @article.comments %>
+  <h2>Comments</h2>
+  <%= render @article.comments %>
 
-<h2>Add a comment:</h2>
-<%= render "comments/form" %>
+  <h3>Add a comment:</h3>
+  <%= render "comments/form" %>
 
-<%= link_to 'Back', articles_path %> | <%= link_to 'Edit', edit_article_path(@article) %>
+  <%= link_to 'Back', articles_path %> | <%= link_to 'Edit', edit_article_path(@article) %>
+</div>
